tf-files/loadbalancer.tf
resource "aws_lb_target_group" "hosp" {
  deregistration_delay               = "300"
  ip_address_type                    = "ipv4"
  lambda_multi_value_headers_enabled = null
  load_balancing_algorithm_type      = "round_robin"
  load_balancing_anomaly_mitigation  = "off"
  load_balancing_cross_zone_enabled  = "use_load_balancer_configuration"
  name                               = "lb-tg-Ciao"
  port                               = 80
  protocol                           = "HTTP"
  protocol_version                   = "HTTP1"
  proxy_protocol_v2                  = null
  slow_start                         = 0
  tags                               = {}
  tags_all                           = {}
  target_type                        = "instance"
  vpc_id                             = "vpc-080dbb0b7dc86503a"
  health_check {
    enabled             = true
    healthy_threshold   = 2
    interval            = 30
    matcher             = "200"
    path                = "/"
    port                = "traffic-port"
    protocol            = "HTTP"
    timeout             = 5
    unhealthy_threshold = 2
  }
  stickiness {
    cookie_duration = 86400
    cookie_name     = null
    enabled         = false
    type            = "lb_cookie"
  }
  target_group_health {
    dns_failover {
      minimum_healthy_targets_count      = 2
      minimum_healthy_targets_percentage = "off"
    }
    unhealthy_state_routing {
      minimum_healthy_targets_count      = 2
      minimum_healthy_targets_percentage = "off"
    }
  }
}


resource "aws_lb_listener" "hosp" {
  alpn_policy                          = null
  certificate_arn                      = null
  load_balancer_arn                    = "arn:aws:elasticloadbalancing:eu-west-2:664047078509:loadbalancer/app/lb-Ciao/d7fd2dde506cb7dd"
  port                                 = 80
  protocol                             = "HTTP"
  routing_http_response_server_enabled = true
  tags                                 = {}
  tags_all                             = {}
  default_action {
    order            = 1
    target_group_arn = "arn:aws:elasticloadbalancing:eu-west-2:664047078509:targetgroup/lb-tg-Ciao/e37a9b3b5fd09c50"
    type             = "forward"
    forward {
      target_group {
        arn    = "arn:aws:elasticloadbalancing:eu-west-2:664047078509:targetgroup/lb-tg-Ciao/e37a9b3b5fd09c50"
        weight = 1
      }
    }
  }
}

# __generated__ by Terraform
resource "aws_lb" "hosp" {
  client_keep_alive                           = 3600
  customer_owned_ipv4_pool                    = null
  desync_mitigation_mode                      = "defensive"
  dns_record_client_routing_policy            = null
  drop_invalid_header_fields                  = false
  enable_cross_zone_load_balancing            = true
  enable_deletion_protection                  = true
  enable_http2                                = true
  enable_tls_version_and_cipher_suite_headers = false
  enable_waf_fail_open                        = false
  enable_xff_client_port                      = false
  enable_zonal_shift                          = false
  idle_timeout                                = 60
  internal                                    = false
  ip_address_type                             = "ipv4"
  load_balancer_type                          = "application"
  name                                        = "lb-Ciao"
  preserve_host_header                        = false
  security_groups                             = ["sg-04874a6f374d17bf6"]
  subnets                                     = ["subnet-09ffb20c4da788637", "subnet-0e606c290592d4005"]
  tags = {
    Owner = "Students"
  }
  tags_all = {
    Owner = "Students"
  }
  xff_header_processing_mode = "append"
  access_logs {
    bucket  = aws_s3_bucket.ciao-lb-logs.bucket
    enabled = true
    prefix  = "hosp-lb-access-logs"
  }
  connection_logs {
    bucket  = aws_s3_bucket.ciao-lb-logs.bucket
    enabled = true
    prefix  = "hosp-lb-connection-logs"
  }
  health_check_logs {
    bucket  = aws_s3_bucket.ciao-lb-logs.bucket
    enabled = true
    prefix  = "hosp-lb-health-check-logs"
  }
}


resource "aws_s3_bucket" "ciao-lb-logs" {
  bucket = "ciao-lb-logs-bucket"

  tags = {
    Owner        = "Ciao"
  }
}

resource "aws_s3_bucket_policy" "alb_logs_policy" {
  bucket = aws_s3_bucket.ciao-lb-logs.id
  policy = jsonencode({
      Version = "2012-10-17",
      Statement = [
        {
          Sid    = "AllowALBAccess",
          Effect = "Allow",
          Principal = {
            Service = "logdelivery.elasticloadbalancing.amazonaws.com"
          },
          Action = "s3:PutObject",
          Resource = "arn:aws:s3:::${aws_s3_bucket.ciao-lb-logs.bucket}/*"
        }
      ]
    })
  }
